Create launch file for bag file conversion

--- a/notebooks/Analysis.ipynb
+++ b/notebooks/Analysis.ipynb
@@ -47,22 +47,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
+    "def read_csv(fname):\n",
+    "    def convert(row):\n",
+    "        arrays = [\"signals_real_vect\", \"signals_imag_vect\", \"frequencies\"]\n",
+    "        ints = [\"n_mics\", \"n_frequencies\", \"timestamp\"]\n",
+    "        for array_name in arrays:\n",
+    "            row[array_name] = np.fromstring(row[array_name].replace('[', '').replace(']',''), sep=' ', dtype=np.float32)\n",
+    "        for int_name in ints:\n",
+    "            row[int_name] = int(row[int_name])\n",
+    "        return row\n",
+    "    df = pd.read_csv(fname)\n",
+    "    df = df.apply(convert, axis=1)\n",
+    "    return df\n",
     "\n",
-    "def convert(row):\n",
-    "    arrays = [\"signals_real_vect\", \"signals_imag_vect\", \"frequencies\"]\n",
-    "    ints = [\"n_mics\", \"n_frequencies\"]\n",
-    "    for array_name in arrays:\n",
-    "        row[array_name] = np.fromstring(row[array_name].replace('[', '').replace(']',''), sep=' ', dtype=np.float32)\n",
-    "    for int_name in ints:\n",
-    "        row[int_name] = int(row[int_name])\n",
-    "    return row\n",
+    "def get_spectrogram(df):\n",
+    "    spectrogram = None\n",
+    "    for i, row in df.iterrows(): \n",
+    "        signals_f = row.signals_real_vect + 1j * row.signals_imag_vect\n",
+    "        signals_f = signals_f.reshape((row.n_mics, row.n_frequencies))\n",
+    "        new_column = np.sum(np.abs(signals_f), axis=0)\n",
     "\n",
-    "#fname = '../test.csv'\n",
-    "fname = '../experiments/nomotors_nosnr_noprops_source.csv'\n",
+    "        #signals_f = signals_f.reshape((int(row[\"n_frequencies\"]), int(row[\"n_mics\"])))\n",
+    "        #new_column = np.sum(np.abs(signals_f), axis=1)\n",
     "\n",
-    "df = pd.read_csv(fname)\n",
-    "df = df.apply(convert, axis=1)"
+    "        if spectrogram is None:\n",
+    "            spectrogram = new_column\n",
+    "        else:\n",
+    "            spectrogram = np.c_[spectrogram, new_column]\n",
+    "    return spectrogram"
    ]
   },
   {
@@ -71,30 +83,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
+    "dirname = '../experiments/2020_09_17_white-noise-static/csv_files'\n",
+    "fname_source = dirname + '/nomotors_nosnr_noprops_source_45.csv'\n",
+    "fname_all =  dirname + '/motors_nosnr_noprops_source_45.csv'\n",
+    "#fname_props = dirname + '../motors_nosnr_noprops_nosource_45.csv'\n",
+    "fname_props = dirname + '/motors_nosnr_noprops_nosource.csv'\n",
     "\n",
-    "#fname = '../test.csv'\n",
-    "fname = '../experiments/nomotors_nosnr_noprops_source.csv'\n",
+    "df_source = read_csv(fname_source)\n",
+    "spectrogram_source = get_spectrogram(df_source)\n",
     "\n",
     "plt.figure()\n",
-    "\n",
-    "spectrogram = None\n",
-    "for i, row in df.iterrows(): \n",
-    "    signals_f = row.signals_real_vect + 1j * row.signals_imag_vect\n",
-    "    signals_f = signals_f.reshape((row.n_mics, row.n_frequencies))\n",
-    "    new_column = np.sum(np.abs(signals_f), axis=0)\n",
-    "\n",
-    "    #signals_f = signals_f.reshape((int(row[\"n_frequencies\"]), int(row[\"n_mics\"])))\n",
-    "    #new_column = np.sum(np.abs(signals_f), axis=1)\n",
-    "\n",
-    "    if spectrogram is None:\n",
-    "        spectrogram = new_column\n",
-    "    else:\n",
-    "        spectrogram = np.c_[spectrogram, new_column]\n",
-    "            \n",
-    "plt.pcolormesh(spectrogram)\n",
+    "plt.pcolormesh(spectrogram_source)\n",
     "plt.xlabel('time index [-]')\n",
-    "plt.ylabel('frequency index [-]')"
+    "plt.ylabel('frequency index [-]')\n",
+    "plt.title('source')\n",
+    "\n",
+    "df_all = read_csv(fname_all)\n",
+    "spectrogram_all = get_spectrogram(df_all)\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.pcolormesh(spectrogram_all)\n",
+    "plt.xlabel('time index [-]')\n",
+    "plt.ylabel('frequency index [-]')\n",
+    "plt.title('all')\n",
+    "\n",
+    "df_props = read_csv(fname_props)\n",
+    "spectrogram_props = get_spectrogram(df_props)\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.pcolormesh(spectrogram_props)\n",
+    "plt.xlabel('time index [-]')\n",
+    "plt.ylabel('frequency index [-]')\n",
+    "plt.title('props')"
    ]
   },
   {
@@ -103,7 +123,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# detect the end time and cut fixed time before it"
+    "duration = 30 * 1e3 # miliseconds\n",
+    "\n",
+    "# create sound level plot over time\n",
+    "sound_level_source = np.sum(spectrogram_source, axis=0) / spectrogram_source.shape[0]\n",
+    "sound_level_all = np.sum(spectrogram_all, axis=0) / spectrogram_all.shape[0]\n",
+    "sound_level_props = np.sum(spectrogram_props, axis=0) / spectrogram_props.shape[0]\n",
+    "\n",
+    "# detect the end time and cut fixed time before it\n",
+    "end_index_source = np.where(sound_level_source > 1e-2)[0][-1]\n",
+    "end_time_source = df_source.timestamp[end_index_source]\n",
+    "plt.semilogy(df_source.timestamp - end_time_source, sound_level_source, color='C0', label='source')\n",
+    "\n",
+    "end_index_all = np.where(sound_level_all > 1e-2)[0][-1]\n",
+    "end_time_all = df_all.timestamp[end_index_all]\n",
+    "plt.semilogy(df_all.timestamp - end_time_all, sound_level_all, color='C1', label='all')\n",
+    "\n",
+    "end_index_props = np.where(sound_level_props > 1e-2)[0][-1]\n",
+    "end_time_props = df_props.timestamp[end_index_props]\n",
+    "plt.semilogy(df_props.timestamp - end_time_props, sound_level_props, color='C2', label='props')\n",
+    "\n",
+    "plt.xlabel('time [ms]')\n",
+    "plt.ylabel('sound level')\n",
+    "plt.legend()"
    ]
   },
   {
@@ -112,7 +154,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create sound level plot over time"
+    "# calculate spatial spectrum using mvdr beamforming method \n",
+    "\n",
+    "df_short = df_source.loc[(end_time_source - df_source.timestamp) < duration]"
    ]
   },
   {
@@ -120,9 +164,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# calculate spatial spectrum using mvdr beamforming method "
-   ]
+   "source": []
   }
  ],
  "metadata": {
