Refactor processing pipeline

--- a/notebooks/Analysis.ipynb
+++ b/notebooks/Analysis.ipynb
@@ -9,8 +9,6 @@
     "import math\n",
     "import sys\n",
     "\n",
-    "sys.path.append(\"../\")\n",
-    "\n",
     "import IPython\n",
     "import IPython.display as ipd\n",
     "import matplotlib.pylab as plt\n",
@@ -47,6 +45,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "CSV_DIRNAME = '../experiments/2020_09_17_white-noise-static/csv_files'\n",
+    "WAV_DIRNAME = '../experiments/2020_09_17_white-noise-static/export'\n",
+    "FS = 32000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def read_csv(fname):\n",
     "    def convert(row):\n",
     "        arrays = [\"signals_real_vect\", \"signals_imag_vect\", \"frequencies\"]\n",
@@ -55,26 +64,62 @@
     "            row[array_name] = np.fromstring(row[array_name].replace('[', '').replace(']',''), sep=' ', dtype=np.float32)\n",
     "        for int_name in ints:\n",
     "            row[int_name] = int(row[int_name])\n",
+    "            \n",
+    "        signals_f = row.signals_real_vect + 1j * row.signals_imag_vect\n",
+    "        signals_f = signals_f.reshape((row.n_mics, row.n_frequencies))\n",
+    "        row['signals_f'] = signals_f\n",
     "        return row\n",
+    "    \n",
     "    df = pd.read_csv(fname)\n",
     "    df = df.apply(convert, axis=1)\n",
+    "    df.drop([\"signals_real_vect\", \"signals_imag_vect\"], axis=1, inplace=True)\n",
+    "    return df\n",
+    "\n",
+    "def read_df(degree=0, props=True, snr=True, motors=True, source=True):\n",
+    "    ending = \"\" if degree == 0 else f\"_{degree}\"\n",
+    "    props_flag = \"\" if props else \"no\"\n",
+    "    motors_flag = \"\" if motors else \"no\"\n",
+    "    source_flag = \"\" if source else \"no\"\n",
+    "    snr_flag = \"\" if snr else \"no\"\n",
+    "    fname = f'{CSV_DIRNAME}/{motors_flag}motors_{snr_flag}snr_{props_flag}props_{source_flag}source{ending}.csv'\n",
+    "    print('reading', fname)\n",
+    "    df = read_csv(fname)\n",
     "    return df\n",
     "\n",
     "def get_spectrogram(df):\n",
-    "    spectrogram = None\n",
-    "    for i, row in df.iterrows(): \n",
-    "        signals_f = row.signals_real_vect + 1j * row.signals_imag_vect\n",
-    "        signals_f = signals_f.reshape((row.n_mics, row.n_frequencies))\n",
-    "        new_column = np.sum(np.abs(signals_f), axis=0)\n",
+    "    stft = np.array([*df.loc[:, 'signals_f']]) # n_times x n_mics x n_freqs\n",
+    "    return np.mean(np.abs(stft), axis=1).T # average over n_mics, n_freqs x n_times\n",
+    "    \n",
+    "def add_soundlevel(df, threshold=1e-2, duration=1000):\n",
+    "    # detect the end time and cut fixed time before it\n",
+    "    spectrogram = get_spectrogram(df) # n_freqs x n_times\n",
+    "    sound_level = np.mean(spectrogram, axis=0) # average over n_frequencies\n",
+    "    df.loc[:, \"sound_level\"] = sound_level\n",
     "\n",
-    "        #signals_f = signals_f.reshape((int(row[\"n_frequencies\"]), int(row[\"n_mics\"])))\n",
-    "        #new_column = np.sum(np.abs(signals_f), axis=1)\n",
+    "    end_index = np.where(sound_level > threshold)[0][-1]\n",
+    "    end_time = df.timestamp[end_index]\n",
+    "    df.loc[:, \"timestamp_s\"] = (df.timestamp - end_time + duration) / 1000\n",
     "\n",
-    "        if spectrogram is None:\n",
-    "            spectrogram = new_column\n",
-    "        else:\n",
-    "            spectrogram = np.c_[spectrogram, new_column]\n",
-    "    return spectrogram"
+    "def plot_spectrogram(spectrogram, label):\n",
+    "    plt.figure()\n",
+    "    plt.pcolormesh(np.log(spectrogram))\n",
+    "    plt.xlabel('time index [-]')\n",
+    "    plt.ylabel('frequency index [-]')\n",
+    "    plt.title(label)\n",
+    "    \n",
+    "def plot_soundlevel(df, label, ax=None):\n",
+    "    if ax is None:\n",
+    "        fig, ax = plt.subplots()\n",
+    "    ax.semilogy(df.timestamp_s, df.sound_level, label=label)\n",
+    "    ax.set_xlabel('time [s]')\n",
+    "    ax.set_ylabel('sound level')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compare sound levels"
    ]
   },
   {
@@ -83,38 +128,230 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dirname = '../experiments/2020_09_17_white-noise-static/csv_files'\n",
-    "fname_source = dirname + '/nomotors_nosnr_noprops_source_45.csv'\n",
-    "fname_all =  dirname + '/motors_nosnr_noprops_source_45.csv'\n",
-    "#fname_props = dirname + '../motors_nosnr_noprops_nosource_45.csv'\n",
-    "fname_props = dirname + '/motors_nosnr_noprops_nosource.csv'\n",
+    "duration = 10 * 1e3 # miliseconds from end\n",
+    "degree = 0\n",
+    "snr = False\n",
+    "props = False\n",
     "\n",
-    "df_source = read_csv(fname_source)\n",
+    "df_source = read_df(degree=degree, props=False, snr=snr, motors=False, source=True)\n",
+    "df_all = read_df(degree=degree, props=props, snr=snr, motors=True, source=True)\n",
+    "df_props = read_df(degree=0, props=False, snr=False, motors=True, source=False)\n",
+    "\n",
     "spectrogram_source = get_spectrogram(df_source)\n",
-    "\n",
-    "plt.figure()\n",
-    "plt.pcolormesh(spectrogram_source)\n",
-    "plt.xlabel('time index [-]')\n",
-    "plt.ylabel('frequency index [-]')\n",
-    "plt.title('source')\n",
-    "\n",
-    "df_all = read_csv(fname_all)\n",
     "spectrogram_all = get_spectrogram(df_all)\n",
-    "\n",
-    "plt.figure()\n",
-    "plt.pcolormesh(spectrogram_all)\n",
-    "plt.xlabel('time index [-]')\n",
-    "plt.ylabel('frequency index [-]')\n",
-    "plt.title('all')\n",
-    "\n",
-    "df_props = read_csv(fname_props)\n",
     "spectrogram_props = get_spectrogram(df_props)\n",
     "\n",
+    "plot_spectrogram(spectrogram_source, label=\"source\")\n",
+    "plot_spectrogram(spectrogram_all, label=\"all\")\n",
+    "plot_spectrogram(spectrogram_props, label=\"props\")\n",
+    "\n",
+    "add_soundlevel(df_source, duration=duration)\n",
+    "add_soundlevel(df_all, duration=duration)\n",
+    "add_soundlevel(df_props, duration=duration)\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "plot_soundlevel(df_source, \"source\", ax=ax)\n",
+    "plot_soundlevel(df_all, \"all\", ax=ax)\n",
+    "plot_soundlevel(df_props, \"props\", ax=ax)\n",
+    "plt.legend()\n",
+    "plt.title('audio deck signals, selected 32 frequencies')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_df_from_wav(fname):\n",
+    "    import wavio\n",
+    "    from scipy.signal import stft\n",
+    "    w = wavio.read(fname)\n",
+    "    source_data = w.data\n",
+    "    \n",
+    "    n_buffer = 1024\n",
+    "\n",
+    "    f, t, source_stft = stft(source_data, w.rate, nperseg=n_buffer, axis=0)\n",
+    "    source_stft = source_stft.transpose([1, 0, 2]) # channels x frequencies x times\n",
+    "    source_freq = np.fft.rfftfreq(n=n_buffer, d=1/w.rate)\n",
+    "\n",
+    "    df = pd.DataFrame(columns=df_source.columns)\n",
+    "    for i in range(source_stft.shape[2]):\n",
+    "        df.loc[len(df), :] = {\n",
+    "            \"index\": i,\n",
+    "            \"timestamp\": i * 1024 /w.rate * 1000, # miliseconds\n",
+    "            \"n_mics\": 2,\n",
+    "            \"topic\": \"measurement_mic\",\n",
+    "            \"signals_f\": source_stft[:, :, i], \n",
+    "            \"frequencies\": source_freq,\n",
+    "            \"n_frequencies\": len(source_freq)\n",
+    "        }\n",
+    "    return df\n",
+    "\n",
+    "fname_source = f'{WAV_DIRNAME}/crazyflie_audio_measurements_nomotors_nosnr_noprops_source_45.wav'\n",
+    "fname_all =    f'{WAV_DIRNAME}/crazyflie_audio_measurements_motors_nosnr_noprops_source_45.wav'\n",
+    "fname_props =  f'{WAV_DIRNAME}/crazyflie_audio_measurements_motors_nosnr_noprops_nosource_45.wav'\n",
+    "\n",
+    "#df_wav_all = read_df_from_wav(fname_all) \n",
+    "#df_wav_source = read_df_from_wav(fname_source) \n",
+    "#df_wav_props = read_df_from_wav(fname_props) \n",
+    "#df_wav_all.to_pickle(fname_all.replace('.wav', '.pk'))\n",
+    "#df_wav_source.to_pickle(fname_source.replace('.wav', '.pk'))\n",
+    "#df_wav_props.to_pickle(fname_props.replace('.wav', '.pk'))\n",
+    "\n",
+    "df_wav_all = pd.read_pickle(fname_all.replace('.wav', '.pk'))\n",
+    "df_wav_source = pd.read_pickle(fname_source.replace('.wav', '.pk'))\n",
+    "df_wav_props = pd.read_pickle(fname_props.replace('.wav', '.pk'))\n",
+    "\n",
+    "thresh = 1e2\n",
+    "add_soundlevel(df_wav_source, threshold=thresh)\n",
+    "add_soundlevel(df_wav_all, threshold=thresh)\n",
+    "add_soundlevel(df_wav_props, threshold=thresh)\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "plot_soundlevel(df_wav_source, label=\"source\", ax=ax)\n",
+    "plot_soundlevel(df_wav_all, label=\"all\", ax=ax)\n",
+    "plot_soundlevel(df_wav_props, label=\"props\", ax=ax)\n",
+    "plt.legend()\n",
+    "plt.title('measurement mic signals, all 512 frequencies')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def select_bins(row):\n",
+    "    signals_f = row.signals_f[:, bins_wav_selected]\n",
+    "    frequencies = row.frequencies[bins_wav_selected]\n",
+    "    row.frequencies = frequencies\n",
+    "    row.n_frequencies = len(frequencies)\n",
+    "    return row\n",
+    "\n",
+    "freqs_selected = df_source.loc[0, 'frequencies']\n",
+    "freqs_wav = df_wav_source.loc[0, 'frequencies']\n",
+    "bins_wav_selected = [np.argmin(np.abs(freq - freqs_wav)) for freq in freqs_selected]\n",
+    "\n",
+    "df_wav_selected_all = df_wav_all.apply(select_bins, axis=1)\n",
+    "df_wav_selected_source = df_wav_source.apply(select_bins, axis=1)\n",
+    "df_wav_selected_props = df_wav_props.apply(select_bins, axis=1)\n",
+    "\n",
+    "print(f\"reduced from {len(df_wav_all.loc[0, 'frequencies'])} to {len(df_wav_selected_all.loc[0, 'frequencies'])}\")\n",
+    "\n",
+    "thresh = 1e2\n",
+    "add_soundlevel(df_wav_selected_source, duration=duration, threshold=thresh)\n",
+    "add_soundlevel(df_wav_selected_all, duration=duration, threshold=thresh)\n",
+    "add_soundlevel(df_wav_selected_props, duration=duration, threshold=thresh)\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "plot_soundlevel(df_wav_selected_source, label=\"source\", ax=ax)\n",
+    "plot_soundlevel(df_wav_selected_all, label=\"all\", ax=ax)\n",
+    "plot_soundlevel(df_wav_selected_props, label=\"props\", ax=ax)\n",
+    "plt.legend()\n",
+    "plt.title('measurement mic signals, selected 32 frequencies')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Beamforming"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "degree = 20\n",
+    "props = False\n",
+    "snr = False\n",
+    "motors = False\n",
+    "source = True\n",
+    "gt_degrees = 180 - degree\n",
+    "duration = 10 * 1e3 # miliseconds\n",
+    "\n",
+    "df = read_df(degree=degree, props=props, snr=snr, motors=motors, source=source)\n",
+    "add_soundlevel(df, duration=duration)\n",
+    "df = df[(df.timestamp_s > 0) & (df.timestamp_s <= (duration / 1000))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from audio_stack.spectrum_estimator import combine_rows, normalize_rows\n",
+    "from audio_stack.beam_former import BeamFormer\n",
+    "\n",
+    "#df = df_source[(df_source.timestamp_s > 0) & (df_source.timestamp_s <= (duration / 1000))]\n",
+    "\n",
+    "combine = \"sum\" #\"product\"\n",
+    "normalize = None #\"zero_to_one\"\n",
+    "\n",
+    "# TODO(FD) will be read from the topic in the future\n",
+    "mic_d = 0.108  # distance between mics (meters)\n",
+    "mic_positions = mic_d / 2 * np.c_[[1, 1], [1, -1], [-1, 1], [-1, -1]].T \n",
+    "\n",
+    "beam_former = BeamFormer(mic_positions=mic_positions)\n",
+    "\n",
+    "das_spectrum = None\n",
+    "mvdr_spectrum = None\n",
+    "\n",
+    "for i, row in df.iterrows():\n",
+    "    signals_f = row.signals_f\n",
+    "    freqs = row.frequencies\n",
+    "\n",
+    "    arg_idx = np.argsort(freqs)\n",
+    "    freqs = freqs[arg_idx]\n",
+    "    signals_f = signals_f[:, arg_idx]\n",
+    "    \n",
+    "    R = beam_former.get_correlation(signals_f.T)\n",
+    "    \n",
+    "    mvdr_spectrum_all = beam_former.get_mvdr_spectrum(R, freqs) # n_frequencies x n_thetas\n",
+    "    das_spectrum_all = beam_former.get_das_spectrum(R, freqs) # n_frequencies x n_thetas\n",
+    "    \n",
+    "    if normalize is not None:\n",
+    "        das_spectrum_all = normalize_rows(das_spectrum_all, method=normalize)\n",
+    "        mvdr_spectrum_all = normalize_rows(mvdr_spectrum_all, method=normalize)\n",
+    "    \n",
+    "    das_spectrum_column = combine_rows(das_spectrum_all, method=combine)\n",
+    "    if das_spectrum is None:\n",
+    "        das_spectrum = das_spectrum_column\n",
+    "    else:\n",
+    "        das_spectrum = np.c_[das_spectrum, das_spectrum_column]\n",
+    "        \n",
+    "    mvdr_spectrum_column = combine_rows(mvdr_spectrum_all, method=combine)\n",
+    "    if mvdr_spectrum is None:\n",
+    "        mvdr_spectrum = mvdr_spectrum_column\n",
+    "    else:\n",
+    "        mvdr_spectrum = np.c_[mvdr_spectrum, mvdr_spectrum_column]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "angles = np.linspace(0, 360, das_spectrum.shape[0])\n",
+    "\n",
     "plt.figure()\n",
-    "plt.pcolormesh(spectrogram_props)\n",
-    "plt.xlabel('time index [-]')\n",
-    "plt.ylabel('frequency index [-]')\n",
-    "plt.title('props')"
+    "plt.pcolormesh(df.timestamp_s, angles, np.log(das_spectrum))\n",
+    "plt.axhline(gt_degrees, color='orange')\n",
+    "plt.xlabel('time [s]')\n",
+    "plt.ylabel('angle [deg]')\n",
+    "plt.title(f'DAS {combine}')\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.pcolormesh(df.timestamp_s, angles, np.log(mvdr_spectrum))\n",
+    "plt.axhline(gt_degrees, color='orange')\n",
+    "plt.xlabel('time [s]')\n",
+    "plt.ylabel('angle [deg]')\n",
+    "plt.title(f'MVDR {combine}')"
    ]
   },
   {
@@ -123,40 +360,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "duration = 30 * 1e3 # miliseconds\n",
+    "plt.figure()\n",
+    "plt.pcolormesh(angles, freqs, np.log(das_spectrum_all))\n",
+    "plt.axvline(gt_degrees, color='orange')\n",
+    "plt.title('DAS')\n",
+    "plt.xlabel('angle [deg]')\n",
+    "plt.ylabel('frequency [Hz]')\n",
     "\n",
-    "# create sound level plot over time\n",
-    "sound_level_source = np.sum(spectrogram_source, axis=0) / spectrogram_source.shape[0]\n",
-    "sound_level_all = np.sum(spectrogram_all, axis=0) / spectrogram_all.shape[0]\n",
-    "sound_level_props = np.sum(spectrogram_props, axis=0) / spectrogram_props.shape[0]\n",
-    "\n",
-    "# detect the end time and cut fixed time before it\n",
-    "end_index_source = np.where(sound_level_source > 1e-2)[0][-1]\n",
-    "end_time_source = df_source.timestamp[end_index_source]\n",
-    "plt.semilogy(df_source.timestamp - end_time_source, sound_level_source, color='C0', label='source')\n",
-    "\n",
-    "end_index_all = np.where(sound_level_all > 1e-2)[0][-1]\n",
-    "end_time_all = df_all.timestamp[end_index_all]\n",
-    "plt.semilogy(df_all.timestamp - end_time_all, sound_level_all, color='C1', label='all')\n",
-    "\n",
-    "end_index_props = np.where(sound_level_props > 1e-2)[0][-1]\n",
-    "end_time_props = df_props.timestamp[end_index_props]\n",
-    "plt.semilogy(df_props.timestamp - end_time_props, sound_level_props, color='C2', label='props')\n",
-    "\n",
-    "plt.xlabel('time [ms]')\n",
-    "plt.ylabel('sound level')\n",
-    "plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# calculate spatial spectrum using mvdr beamforming method \n",
-    "\n",
-    "df_short = df_source.loc[(end_time_source - df_source.timestamp) < duration]"
+    "plt.figure()\n",
+    "plt.pcolormesh(angles, freqs, np.log(mvdr_spectrum_all))\n",
+    "plt.axvline(gt_degrees, color='orange')\n",
+    "plt.title('MVDR')\n",
+    "plt.xlabel('angle [deg]')\n",
+    "plt.ylabel('frequency [Hz]')"
    ]
   },
   {
