Create evaluation script and first plots

--- a/notebooks/Analysis.ipynb
+++ b/notebooks/Analysis.ipynb
@@ -21,8 +21,16 @@
     "%matplotlib inline\n",
     "#%matplotlib notebook\n",
     "\n",
-    "np.random.seed(1)\n",
-    "\n",
+    "from matplotlib import rcParams\n",
+    "rcParams[\"figure.max_open_warning\"] = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def custom_save(function=plt.savefig, fname=\"\"):\n",
     "    if not os.path.exists(os.path.dirname(fname)):\n",
     "        os.makedirs(os.path.dirname(fname))\n",
@@ -33,72 +41,6 @@
     "    except:\n",
     "        function(fname)\n",
     "    print(\"saved as\", fname)\n",
-    "\n",
-    "from matplotlib import rcParams\n",
-    "\n",
-    "rcParams[\"figure.max_open_warning\"] = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "CSV_DIRNAME = '../experiments/2020_09_17_white-noise-static/csv_files'\n",
-    "WAV_DIRNAME = '../experiments/2020_09_17_white-noise-static/export'\n",
-    "FS = 32000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def read_csv(fname):\n",
-    "    def convert(row):\n",
-    "        arrays = [\"signals_real_vect\", \"signals_imag_vect\", \"frequencies\"]\n",
-    "        ints = [\"n_mics\", \"n_frequencies\", \"timestamp\"]\n",
-    "        for array_name in arrays:\n",
-    "            row[array_name] = np.fromstring(row[array_name].replace('[', '').replace(']',''), sep=' ', dtype=np.float32)\n",
-    "        for int_name in ints:\n",
-    "            row[int_name] = int(row[int_name])\n",
-    "            \n",
-    "        signals_f = row.signals_real_vect + 1j * row.signals_imag_vect\n",
-    "        signals_f = signals_f.reshape((row.n_mics, row.n_frequencies))\n",
-    "        row['signals_f'] = signals_f\n",
-    "        return row\n",
-    "    \n",
-    "    df = pd.read_csv(fname)\n",
-    "    df = df.apply(convert, axis=1)\n",
-    "    df.drop([\"signals_real_vect\", \"signals_imag_vect\"], axis=1, inplace=True)\n",
-    "    return df\n",
-    "\n",
-    "def read_df(degree=0, props=True, snr=True, motors=True, source=True):\n",
-    "    ending = \"\" if degree == 0 else f\"_{degree}\"\n",
-    "    props_flag = \"\" if props else \"no\"\n",
-    "    motors_flag = \"\" if motors else \"no\"\n",
-    "    source_flag = \"\" if source else \"no\"\n",
-    "    snr_flag = \"\" if snr else \"no\"\n",
-    "    fname = f'{CSV_DIRNAME}/{motors_flag}motors_{snr_flag}snr_{props_flag}props_{source_flag}source{ending}.csv'\n",
-    "    print('reading', fname)\n",
-    "    df = read_csv(fname)\n",
-    "    return df\n",
-    "\n",
-    "def get_spectrogram(df):\n",
-    "    stft = np.array([*df.loc[:, 'signals_f']]) # n_times x n_mics x n_freqs\n",
-    "    return np.mean(np.abs(stft), axis=1).T # average over n_mics, n_freqs x n_times\n",
-    "    \n",
-    "def add_soundlevel(df, threshold=1e-2, duration=1000):\n",
-    "    # detect the end time and cut fixed time before it\n",
-    "    spectrogram = get_spectrogram(df) # n_freqs x n_times\n",
-    "    sound_level = np.mean(spectrogram, axis=0) # average over n_frequencies\n",
-    "    df.loc[:, \"sound_level\"] = sound_level\n",
-    "\n",
-    "    end_index = np.where(sound_level > threshold)[0][-1]\n",
-    "    end_time = df.timestamp[end_index]\n",
-    "    df.loc[:, \"timestamp_s\"] = (df.timestamp - end_time + duration) / 1000\n",
     "\n",
     "def plot_spectrogram(spectrogram, label):\n",
     "    plt.figure()\n",
@@ -113,6 +55,16 @@
     "    ax.semilogy(df.timestamp_s, df.sound_level, label=label)\n",
     "    ax.set_xlabel('time [s]')\n",
     "    ax.set_ylabel('sound level')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from evaluate_data import  CSV_DIRNAME, WAV_DIRNAME, FS \n",
+    "from evaluate_data import read_df, get_spectrogram, add_soundlevel"
    ]
   },
   {
@@ -265,17 +217,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degree = 20\n",
-    "props = False\n",
-    "snr = False\n",
-    "motors = False\n",
-    "source = True\n",
-    "gt_degrees = 180 - degree\n",
-    "duration = 10 * 1e3 # miliseconds\n",
+    "from evaluate_data import evaluate_data\n",
     "\n",
-    "df = read_df(degree=degree, props=props, snr=snr, motors=motors, source=source)\n",
-    "add_soundlevel(df, duration=duration)\n",
-    "df = df[(df.timestamp_s > 0) & (df.timestamp_s <= (duration / 1000))]"
+    "fname = 'results/static_spectra.pkl'\n",
+    "result_df = evaluate_data(fname)"
    ]
   },
   {
@@ -284,61 +229,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from audio_stack.spectrum_estimator import combine_rows, normalize_rows\n",
-    "from audio_stack.beam_former import BeamFormer\n",
-    "\n",
-    "#df = df_source[(df_source.timestamp_s > 0) & (df_source.timestamp_s <= (duration / 1000))]\n",
-    "\n",
-    "combine = \"sum\" #\"product\"\n",
-    "normalize = None #\"zero_to_one\"\n",
-    "\n",
-    "# TODO(FD) will be read from the topic in the future\n",
-    "mic_d = 0.108  # distance between mics (meters)\n",
-    "mic_positions = mic_d / 2 * np.c_[[1, 1], [1, -1], [-1, 1], [-1, -1]].T \n",
-    "\n",
-    "beam_former = BeamFormer(mic_positions=mic_positions)\n",
-    "\n",
-    "das_spectrum = None\n",
-    "mvdr_spectrum = None\n",
-    "\n",
-    "for i, row in df.iterrows():\n",
-    "    signals_f = row.signals_f\n",
-    "    freqs = row.frequencies\n",
-    "\n",
-    "    arg_idx = np.argsort(freqs)\n",
-    "    freqs = freqs[arg_idx]\n",
-    "    signals_f = signals_f[:, arg_idx]\n",
-    "    \n",
-    "    R = beam_former.get_correlation(signals_f.T)\n",
-    "    \n",
-    "    mvdr_spectrum_all = beam_former.get_mvdr_spectrum(R, freqs) # n_frequencies x n_thetas\n",
-    "    das_spectrum_all = beam_former.get_das_spectrum(R, freqs) # n_frequencies x n_thetas\n",
-    "    \n",
-    "    if normalize is not None:\n",
-    "        das_spectrum_all = normalize_rows(das_spectrum_all, method=normalize)\n",
-    "        mvdr_spectrum_all = normalize_rows(mvdr_spectrum_all, method=normalize)\n",
-    "    \n",
-    "    das_spectrum_column = combine_rows(das_spectrum_all, method=combine)\n",
-    "    if das_spectrum is None:\n",
-    "        das_spectrum = das_spectrum_column\n",
-    "    else:\n",
-    "        das_spectrum = np.c_[das_spectrum, das_spectrum_column]\n",
-    "        \n",
-    "    mvdr_spectrum_column = combine_rows(mvdr_spectrum_all, method=combine)\n",
-    "    if mvdr_spectrum is None:\n",
-    "        mvdr_spectrum = mvdr_spectrum_column\n",
-    "    else:\n",
-    "        mvdr_spectrum = np.c_[mvdr_spectrum, mvdr_spectrum_column]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "angles = np.linspace(0, 360, das_spectrum.shape[0])\n",
-    "\n",
     "plt.figure()\n",
     "plt.pcolormesh(df.timestamp_s, angles, np.log(das_spectrum))\n",
     "plt.axhline(gt_degrees, color='orange')\n",
@@ -373,6 +263,120 @@
     "plt.title('MVDR')\n",
     "plt.xlabel('angle [deg]')\n",
     "plt.ylabel('frequency [Hz]')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fname = 'results/static_spectra.pkl'\n",
+    "result_df = pd.read_pickle(fname)\n",
+    "angles = np.linspace(0, 360, 181)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A. Ideal case: what is best combination of method+combine+normalize? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "from evaluate_data import degree_list, method_list, combine_list, normalize_list\n",
+    "\n",
+    "base_dict = dict(\n",
+    "    motors=False,\n",
+    "    props=False,\n",
+    "    snr=False, \n",
+    "    degree=None, # will be set later\n",
+    "    method=None,\n",
+    "    combine=None,\n",
+    "    normalize=None\n",
+    ")\n",
+    "\n",
+    "for degree, method, normalize, combine in itertools.product(degree_list, method_list, normalize_list, combine_list):\n",
+    "    gt_degree = 180 - degree\n",
+    "    \n",
+    "    this_dict = base_dict.copy()\n",
+    "    this_dict[\"degree\"] = degree\n",
+    "    this_dict[\"method\"] = method\n",
+    "    this_dict[\"combine\"] = combine\n",
+    "    this_dict[\"normalize\"] = normalize\n",
+    "    \n",
+    "    this_df = result_df.copy()\n",
+    "    for key, val in this_dict.items():\n",
+    "        if not len(this_df.loc[this_df[key]==val]):\n",
+    "            print(f'did not find any {key}=={val} in results. Available: {this_df[key].unique()}')\n",
+    "        this_df = this_df.loc[this_df[key]==val]\n",
+    "        if not len(this_df):\n",
+    "            break\n",
+    "            \n",
+    "    if not len(this_df):\n",
+    "        continue \n",
+    "        \n",
+    "        \n",
+    "    # angles x times\n",
+    "    full_spectrum = np.array([*this_df.loc[:, \"spectrum\"]]).T\n",
+    "    \n",
+    "    fig = plt.figure()\n",
+    "    fig.set_size_inches(10, 5)\n",
+    "    plt.pcolormesh(range(full_spectrum.shape[1]), angles, np.log(full_spectrum))\n",
+    "    plt.colorbar()\n",
+    "    plt.axhline(gt_degree, color='orange', ls=':')\n",
+    "    plt.xlabel('time idx [-]')\n",
+    "    plt.ylabel('angle [deg]')\n",
+    "    plt.title(f\"{degree} deg, method:{method}, normalize:{normalize}, combine:{combine}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## B. no motors: does it help to use high-SNR bins? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_dict = dict(\n",
+    "    motors=False,\n",
+    "    props=False,\n",
+    "    snr=None, # will be set later\n",
+    "    degrees=None, # will be set later\n",
+    "    method='mvdr',\n",
+    "    combine='product'\n",
+    ")\n",
+    "\n",
+    "this_dict = base_dict.copy()\n",
+    "this_dict[\"degree\"] = degree\n",
+    "this_dict[\"snr\"] = snr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## C. motors, no filtering: does it help to use high-SNR bins? "
    ]
   },
   {
